User mail right after page creation and 7days after creation

--- a/app/views/home/includes/_founders.erb
+++ b/app/views/home/includes/_founders.erb
@@ -331,7 +331,7 @@
   <div class="pr-details">
     <p>BenVarım projesinde yazılım mühendisi olarak görev yapan Berkan Kısaoğlu, 1987 yılında Osmaniye'de doğdu. İlköğretim ve lise derecelerini Osmaniye'de tamamlayan Berkan, lisans derecesini ODTÜ Bilgisayar Mühendisliği'nden aldı ve şuan ABD Silikon Vadisi'nde başarılı bir sosyal ağ start-up'ında çalışmaktadır.</p>
 
-    <p>Lisans derecesi süresince web teknolojileri üzerine araştırmalar ve çalışmalar yapan Berkan, çeşitli ulusal yarışmalarda ödüller aldı. Bu süre zarfında sadece teknoloji alanında çalışmalar yapmakla kalmayıp, öğrenci topluluklarının, meslek örgütlerinin ve organizasyonların da çeşitli kademelerinde görev alan Berkan, mezuniyet sonrasında da bilgi birikimini aktarabileceği organizasyonlarda bulunmaya özen göstermiştir. </p>
+    <p>Lisans derecesi süresince web teknolojileri üzerine araştırmalar ve çalışmalar yapan Berkan, çeşitli ulusal yarışmalarda ödüller aldı. Bu süre zarfında sadece teknoloji alanında çalışmalar yapmakla kalmayıp, öğrenci topluluklarının, meslek örgütlerinin ve organizasyonların da çeşitli kademelerinde de görev aldı. Mezuniyet sonrasında da bilgi birikimini aktarabileceği ve kullanabileceği organizasyonlarda bulunmaya özen göstermiştir. </p>
     <div class="p-other">
       <a href="http://www.linkedin.com/pub/berkan-k%C4%B1sao%C4%9Flu/2a/154/a29" target="_blank" title="LinkedIn profilini görüntüle">
         <img src="/images/social_media_mini_icons/png/linkedin.png" />
