--- a/app/views/user_mailer/new_page.html.erb
+++ b/app/views/user_mailer/new_page.html.erb
@@ -5,17 +5,17 @@
 
 Merhaba <%=@user.name%>,<br/>
 
-Benvarim.com'da oluşturduğun bağış sayfası ve topladığın bağışlar için tebrik ederiz.<br/>
-Dileriz sayfada oluşturduğun bağış hedefi en kısa zamanda başarıya ulaşır.<br/>
-<br/>
-BenVarım ekibinin yardımcı olabileceği bir konu varsa bizimle her zaman iletişime geçebilirsin.<br/>
-<br/>
-Sayfanın başarılı olması için, birkaç altın kural var. Öncelikle yakın çevrenden bağış yapacağına emin olduğun kişilerden bağış istemek faydalı olur.<br/>
-En önemlisi, düzenli aralıklarla sayfanı paylaşmak ve çevrene duyurmak.<br/>
-Yılmadan paylaşmaya, bağış istemeye devam ettikçe, bağış hedefine ulaşacaksın.<br/>
-<br/>
-Ekte linkini verdiğimiz video ve birkaç blog linklerinin yardımcı olacağına inanıyoruz.<br/>
-<a href="http://blog.benvarim.com/gonullu-bagis-sayfasi-nasil-hazirlanir/">Gönüllü sayfası nasıl hazırlanır? </a><br/>
-<a href="http://vimeo.com/33775867">Bağış sayfanızla başarıyla ulaşmanın sırları</a><br/>
-<br/>
+Benvarim.com'da "<%=@page.title%>" isimli bağış sayfanı yarattın. Tebrikler! Şimdi sıra hedefine ulaşmaya geldi. <br/>
+Başarıya ulaşma yöntemleri ile ilgili <a href="https://vimeo.com/33775867">video</a>muzu seyretmek ister misin? (<a href="https://vimeo.com/33775867">https://vimeo.com/33775867</a>) <br/><br/>
+
+Sayfanı başarıya ulaştırmanın 3 altın kuralı var: <br/>
+<ul>
+	<li>İyi bir sebep ve teşvik edici bir açıklama</li>
+	<li>Doğru bir hedef</li>
+	<li>Çevreni yeterince haberdar etmek</li>
+</ul>
+
+Bu konuda daha detaylı bir yazıyı <a href="http://blog.benvarim.com/gonullu-bagis-sayfasi-nasil-hazirlanir/">blog</a>'umuzda bulabilirsin. <br/>
+"Ben de varım" dedigin için teşekkürler!<br/>
+
 <%=render :partial => "email_layouts/footer" %>
