updated links and fb sharer dialog

--- a/app/views/layouts/_tweet_link.html.erb
+++ b/app/views/layouts/_tweet_link.html.erb
@@ -1,4 +1,4 @@
-<a href="https://twitter.com/share?url=<%=url%>&via=ben_varim&text=<%=tweet_text%>">
+<a href="https://twitter.com/share?url=<%=CGI.escape(url)%>&via=ben_varim&text=<%=CGI.escape(tweet_text)%>">
 <img title="Facebook'ta Beğen" src="https://www.benvarim.com/images/social_media_mini_icons/png/twitter.png" alt="" />
 <%=text%>
 </a>
