--- a/app/views/layouts/_tweet_link.text.erb
+++ b/app/views/layouts/_tweet_link.text.erb
@@ -1,1 +1,1 @@
-<%=text%> https://twitter.com/share?url=<%=url%>&via=ben_varim&text=<%=tweet_text%>
+<%=text%> https://twitter.com/share?url=<%=CGI.escape(url)%>&via=ben_varim&text=<%=CGI.escape(tweet_text)%>
