new page last 7 day email

--- a/app/views/user_mailer/new_page_last_7_days.html.erb
+++ b/app/views/user_mailer/new_page_last_7_days.html.erb
@@ -2,13 +2,25 @@
   :locals => {
     :title => @subject
   }%>
-<% page = @page%>
+
 Merhaba <%=@user.name%>,<br/>
 <br/>
-
-<%=render :partial => "layouts/like_link",
+<a href="<%=page_path(@page, :only_path => false)%>"><%=@page.title%><a/> isimli bağış sayfanın kapanmasına 7 gün kaldı. Bağış hedefine ulaşmak için <%=@page.goal_str%> TL daha toplanması gerekiyor. <br/>
+<br/>
+Haydi şimdi bu bilgiyi dostlarınla paylaş ve onları destek olmaya bir kez daha davet et.<br/>
+<br/>
+Yakın dostlarına <%=render :partial => "layouts/fb_msg_to_friends_link",
     :locals => {
-      :url => page_path(page, :only_path => false),
-      :text => "Facebook"
-    }%>
+      :url => page_path(@page, :only_path => false),
+      :text => "email ve mesaj at."
+    }%><br/>
+
+<%=render :partial => "layouts/tweet_link",
+      :locals => {
+        :url => page_path(@page, :only_path => false),
+        :text => "Twitter'da paylaş",
+        :tweet_text => "Sayfamın başarıya ulaşması için son 7 gün. :( Haydi!"
+      }%><br/>
+
+
 <%=render :partial => "email_layouts/footer" %>
