User page failed template

--- a/app/views/user_mailer/new_page.html.erb
+++ b/app/views/user_mailer/new_page.html.erb
@@ -3,7 +3,7 @@
     :title => ""
   }%>
 
-Merhaba <%=@user.name%>,<br/>
+Merhaba <%=@user.name%>,<br/><br/>
 
 Benvarim.com'da "<%=@page.title%>" isimli bağış sayfanı yarattın. Tebrikler! Şimdi sıra hedefine ulaşmaya geldi. <br/>
 Başarıya ulaşma yöntemleri ile ilgili <a href="https://vimeo.com/33775867">video</a>muzu seyretmek ister misin? (<a href="https://vimeo.com/33775867">https://vimeo.com/33775867</a>) <br/><br/>
