--- a/app/views/user_mailer/new_page_7_days.html.erb
+++ b/app/views/user_mailer/new_page_7_days.html.erb
@@ -3,7 +3,7 @@
     :title => ""
   }%>
 
-Merhaba <%=@user.name%>,<br/>
+Merhaba <%=@user.name%>,<br/><br/>
 Ben <%=@organization.contact_name%>, <%=@organization.name%>'de <%=@organization.contact_title%> olarak görev yapmaktayım. <br/> 
 <a href="https://benvarim.com">Benvarim.com</a>'da kurumumuzu desteklemek adına açtığın bağış sayfası için teşekkürler. Bu emailde sana <%=@organization.name%> ve toplanan kaynağın aktarılacağı proje hakkında daha detaylı bilgi vermek isterim. <br/><br/>
 
