adds new stats widget

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -29,6 +29,15 @@
 
 <div class="container">
 
+  <div class="stats">
+    <p>
+      <span class="count count-supporter"></span> gönüllü,
+      <span class="count count-donor"></span> bağışçı
+      sayesinde bugüne kadar toplam
+      <span class="count count-total"></span> TL bağış toplandı.
+    </p>
+  </div>
+
   <div class="widget widget-light clearfix" id="featured-charities">
       <div class="w-inner">
         <div class="w-title">Destekleyebileceğiniz kurumlar</div>
