adds stats to homepage

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -27,9 +27,8 @@
   </div><!-- end of .container -->
 </div>
 
-<div class="container">
-
-  <div class="stats">
+<div id="stats">
+  <div class="container">
     <p>
       <span class="count count-supporter"></span> gönüllü,
       <span class="count count-donor"></span> bağışçı
@@ -37,6 +36,9 @@
       <span class="count count-total"></span> TL bağış toplandı.
     </p>
   </div>
+</div>
+
+<div class="container">
 
   <div class="widget widget-light clearfix" id="featured-charities">
       <div class="w-inner">
