--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2234,7 +2234,6 @@ blockquote span.quotation{
 ** ANASAYFA
 *************************************************************************************/
 
-
 /*************************************************************************************
 ** NEDIR
 *************************************************************************************/
@@ -2272,6 +2271,21 @@ blockquote span.quotation{
   display: none;
 }
 
+#stats {
+  background: white;
+  text-align: center;
+  margin-bottom: 30px;
+  border-top: 1px solid #DDD;
+  vertical-align: bottom;
+}
+
+#stats p {
+  margin: 0;
+  padding: 10px 0;
+  line-height: 60px;
+  height: 60px;
+  font-size: 24px;
+}
 
 
 
