--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -47,36 +47,13 @@
         <a href="https://www.benvarim.com/kurum//turkiye-egitim-gonulluleri-vakfi-tegv" id="fc-tegv" title="Türk Eğitim Gönüllüleri Vakfı">Türk Eğitim Gönüllüleri Vakfı</a>
         <a href="https://www.benvarim.com/kurum/toplum-gonulluleri-vakfi-tog" id="fc-tog" title="Toplum Gönüllüleri Vakfı">Toplum Gönüllüleri Vakfı</a>
         <a href="https://www.benvarim.com/kurum/bugday-ekolojik-yasami-destekleme-dernegi" id="fc-bugday" title="Buğday Ekolojik Yaşamı Destekleme Derneği">Buğday Ekolojik Yaşamı Destekleme Derneği</a>
-
-
-        <!--
-        <a href="https://www.benvarim.com/kurum/ormana-kalkinma-ve-yardimlasma-vakfi" id="fc-ormana" title="Ormana Vakfı">Ormana Vakfı</a>
-        <a href="https://www.benvarim.com/kurum/nesin-vakfi" id="fc-nesin" title="Nesin Vakfı">Nesin Vakfı</a>
-        <a href="https://www.benvarim.com/kurum/cagdas-yasami-destekleme-dernegi" id="fc-cydd" class="fc-default" title="Çağdaş Yaşamı Destekleme Derneği">Çağdaş Yaşamı Destekleme Derneği</a>
-        -->
-
         <a href="https://benvarim.com/kurum/turkish-educational-foundation-abd" id="fc-tef" class="fc-default" title="Turkish Educational Foundation">Turkish Educational Foundation</a>
-
         <a href="https://www.benvarim.com/kurum/biseg-bir-insan-saglik-ve-egitim-koyleri-gonulluler-dernegi" id="fc-biseg" class="fc-default" title="BISEG - Bir İnsan Sağlık ve Eğitim Köyleri Derneği">BISEG - Bir İnsan Sağlık ve Eğitim Köyleri Derneği</a>
-
         <!--
         <a href="https://www.benvarim.com/kurum/sizofreni-dernekleri-federasyonu" id="fc-sizofreni" class="fc-default hidden" title="Şizofreni Dernekleri Federasyonu">Şizofreni Dernekleri Federasyonu</a>
         -->
-
         <a href="https://www.benvarim.com/kurum/tocev-tuvana-okuma-istekli-cocuk-egitim-vakfi" id="fc-tocev" class="fc-default" title="TOÇEV Tüvana Okuma İstekli Çocuk Eğitim Vakfı">TOÇEV Tüvana Okuma İstekli Çocuk Eğitim Vakfı</a>
-
         <a href="https://www.benvarim.com/kurum/turkiye-omurilik-felclileri-dernegi-tofd" id="fc-tofd" class="fc-default" title="Türkiye Omurilik Felçlileri Derneği (TOFD)">Türkiye Omurilik Felçlileri Derneği (TOFD)</a>
-
-
-
-
-        <!--
-          <a href="/kurum/yeni" id="fc-item" class="fc-default" title="Yeni Vakıf ve Dernek Kaydı">Yeni Vakıf ve Dernek Kaydı</a>
-
-          <a href="#" id="fc-tema" class="opaque" title="TEMA">TEMA</a>
-          <a href="#" id="fc-iksv" class="opaque" title="IKSV">IKSV</a>
-          <a href="#" id="fc-tegv" class="opaque" title="TEGV">TEGV</a>
-          -->
         <div class="more-link"><a href="/kurumlar">Tüm Kurumları Listele &raquo;</a></div>
       </div>
   </div>
@@ -106,14 +83,22 @@
     </div>
   </div>
 
-  <div id="main-content">
-    <div id="home-stats">
 
 
-
-
+  <div class="widget widget-light clearfix" id="featured-supporters">
+    <div class="w-inner">
+      <div class="w-title">BenVarım'da bu hafta neler oldu?</div>
+        <ul>
+          <li>
+            <img src="#" class="supporter-photo"/>
+            <a href="#"><span class="supporter-name"></span></a>
+            <a href="#"><span class="supported-org"></span></a> kurumunu destekledi.
+          </li>
+        </ul>
+      <!-- <div class="more-link"><a href="/kurumlar">Tüm Kurumları Listele &raquo;</a></div> -->
     </div>
-  </div><!-- end of #main-content -->
+  </div>
+
 
 
 
