--- a/public/stylesheets/page.css
+++ b/public/stylesheets/page.css
@@ -217,15 +217,10 @@
 
 .p-item {
 
-  -webkit-transition: background 0.3s linear;
-  -moz-transition: background 0.3s linear;
-  -o-transition: background 0.3s linear;
-  transition: background 0.3s linear;
-
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+  -o-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
 
 
   float: left;
@@ -246,6 +241,10 @@
 .p-item:hover {
   background: #EDFAFF;
   cursor: pointer;
+
+  -moz-box-shadow: 0 0 8px #0862A2;
+  -webkit-box-shadow: 0 0 8px #0862A2;
+  box-shadow: 0 0 8px #0862A2;
   /* one day...
     -moz-transform: scale(1.05);
     -webkit-transform: scale(1.05);
