adds mixpanel, introduces this week on benvarim

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -89,11 +89,15 @@
     <div class="w-inner">
       <div class="w-title">BenVarım'da bu hafta neler oldu?</div>
         <ul>
+
           <li>
-            <img src="#" class="supporter-photo"/>
-            <a href="#"><span class="supporter-name"></span></a>
-            <a href="#"><span class="supported-org"></span></a> kurumunu destekledi.
+            <p>
+              <img src="#" class="supporter-photo"/>
+              <a href="#"><span class="supporter-name"></span></a>,
+              <a href="#"><span class="supported-org"></span></a> kurumunu destekledi.
+            </p>
           </li>
+
         </ul>
       <!-- <div class="more-link"><a href="/kurumlar">Tüm Kurumları Listele &raquo;</a></div> -->
     </div>
