--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -65,6 +65,7 @@
               <li><a href="http://blog.benvarim.com/">Blog</a></li>
               <!-- <li>Basın Bültenleri</li> -->
               <li><%=link_to "Yeni Kurum Kaydı", :new_organization %></li>
+
             </ul>
           </div>
         </div>
@@ -73,6 +74,11 @@
 
 
   </div>
+
+  <a class="mixpanel" href="http://mixpanel.com/f/partner">
+    <img src="http://mixpanel.com/site_media/images/partner/badge_blue.png" alt="Real Time Web Analytics" />
+  </a>
+
 </div> <!--! end of #footer -->
 
 <script>
