--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -90,14 +90,18 @@
       <div class="w-title">BenVarım'da bu hafta neler oldu?</div>
         <ul>
 
+		<% @feed.each do |user,support| %>
           <li>
             <p>
-              <img src="#" class="supporter-photo"/>
-              <a href="#"><span class="supporter-name"></span></a>,
-              <a href="#"><span class="supported-org"></span></a> kurumunu destekledi.
+              <img src="<%=user.photo.url(:thumb)%>" class="supporter-photo"/>
+              <a href="<%=user_path(user)%>"><span class="supporter-name"><%=user.name%></span></a>,
+              <% support.each do |s| %>
+              	  <a href="<%=organization_path(s.organization)%>"><span class="supported-org"><%=s.organization.name%></span></a>,
+              <% end %>
+              <a href="#"><span class="supported-org"></span></a> <%=support.count>1?"kurumlarını":"kurumunu"%> destekledi.
             </p>
           </li>
-
+		<% end %>
         </ul>
       <!-- <div class="more-link"><a href="/kurumlar">Tüm Kurumları Listele &raquo;</a></div> -->
     </div>
