cleans up this week

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -30,10 +30,11 @@
 <div id="stats">
   <div class="container">
     <p>
-      <span class="count count-supporter"></span> <%=@user_count%> gönüllü,
-      <span class="count count-donor"></span><%=@donor_count%> bağışçı
+      BenVarım kullanıcısı
+      <span class="count count-supporter"><%=@user_count%> </span> gönüllü,
+      <span class="count count-donor"><%=@donor_count%></span> bağışçı
       sayesinde bugüne kadar toplam
-      <span class="count count-total"></span><%=@payment_amount%> TL bağış toplandı.
+      <span class="count count-total"><strong><%=@payment_amount%> TL</strong></span> bağış toplandı.
     </p>
   </div>
 </div>
