--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -99,9 +99,14 @@
             <div class="feed-item-details">
               <p>
                 <a href="<%=user_path(user)%>"><span class="supporter-name"><%=user.name%></span></a>,
-                <% support.each do |s| %>
-                	  <a href="<%=organization_path(s.organization)%>"><span class="supported-org"><%=s.organization.name%></span></a>,
+
+                <% len = support.length %>
+                <% support.each_with_index do |s, i| %>
+                	  <% if (i+1 == len) && (i>0) %> ve <% end %>
+                	  <a href="<%=organization_path(s.organization)%>">
+                	    <span class="supported-org"><%=s.organization.name%></span></a><% if (i+1 != len) && (i+2 != len)   %>, <% end%>
                 <% end %>
+
                 <a href="#"><span class="supported-org"></span></a> <%=support.count>1?"kurumlarını":"kurumunu"%> destekledi.
               </p>
             </div>
