replaces destekle with begen

--- a/app/views/home/includes/_nedir.html.erb
+++ b/app/views/home/includes/_nedir.html.erb
@@ -112,7 +112,7 @@
           	    <% end
             	  %>
             	  <% if len == 1%>
-            	  kurumunu destekledi.
+            	  kurumunu beğendi.
             	  <% elsif len > 2%>
             	  ve
             	  <a
@@ -129,12 +129,12 @@
                     <% end %>
                   </ul>'>
             	      <%=len-1%> kurumu
-            	  </a> daha destekledi.
+            	  </a> daha beğendi.
 
 
 
             	  <% else %>
-            	  kurumlarını destekledi.
+            	  kurumlarını beğendi.
             	  <% end%>
               </p>
             </div>
