--- a/app/views/organizations/includes/_dialog_support.html.erb
+++ b/app/views/organizations/includes/_dialog_support.html.erb
@@ -9,7 +9,7 @@
   <% percentage = (total_supporters/target_supporters) %>
 
 
-  <div class="dialog" id="dialog-post-support" title="Desteklediğin için teşekkürler!">
+  <div class="dialog" id="dialog-post-support" title="Beğendiğin için teşekkürler!">
 
     <div class="d-header">
       <div class="dh-title">
@@ -19,7 +19,7 @@
           </div>
 
           <p>
-            <%= target_supporters_str %> destekçiye ulaşmak için <strong><%= @support.organization.name %> sana ihtiyaç duyuyor.</strong> Bu sayfayı paylaşarak sen de daha fazla kişinin desteklemesini sağlayabilirsin.
+            <%= target_supporters_str %> kişiye ulaşmak için <strong><%= @support.organization.name %> sana ihtiyaç duyuyor.</strong> Bu sayfayı paylaşarak sen de daha fazla kişinin beğenmesini sağlayabilirsin.
           </p>
 
           <!-- <div class="pb-container-small clearfix">
@@ -48,7 +48,7 @@
 
     <div class="d-content ">
       <div class="separator"></div>
-      <p><strong>Neden <%= target_supporters_str %> destekçi gerekli?</strong></p>
+      <p><strong>Neden <%= target_supporters_str %> kişi gerekli?</strong></p>
       <p>Şirketler, BenVarım platformu üzerinden sponsorluk anlaşması yapmadan önce kuruma olan güveni ve desteği görmek istiyor. Size özel bu linki paylaşarak sevdiğiniz kurum için "<i>cebinizden hiç para çıkmadan</i>" destek toplayın.</p>
     </div><!-- .d-content -->
 
