--- a/app/views/pages/_list_pages_condensed.erb
+++ b/app/views/pages/_list_pages_condensed.erb
@@ -37,7 +37,7 @@
             </div>
             <% if page.can_be_donated? %>
             <div class="pb-action">
-              <%=link_to "Destekle", page, :class => "yellow button small no-margin"  %>
+              <%=link_to "Bağış Yap", page, :class => "yellow button small no-margin"  %>
             </div>
             <% end %>
           </div><!-- .pb-container-small -->
