--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -97,7 +97,7 @@
                 %>
 
                 <div class="row center">
-                  <%=link_to "Ben de destek olmak istiyorum.", donate_popup_for_page_path(@page), :class => "yellow button no-margin large", :rel => "facebox"%>
+                  <%=link_to "Sen de bağış yap!", donate_popup_for_page_path(@page), :class => "yellow button no-margin large", :rel => "facebox"%>
                 </div><!-- end of .row -->
               <% else %>
                 <p><%= @page.user.name%> ilk destekçisini bekliyor.</p>
